# SARIMA_simple

./: CLION.md  CMakeLists.txt  README.md  build.ps1  build_log.txt
include/: sarima.h
scripts/: annotate_comments.ps1  extract_sarima.ps1  func_desc.txt  func_rules.txt  merge_headers.ps1  merge_sources.ps1
scripts/headers/: cstats.c.hdr  fft.c.hdr  fit.c.hdr  linalg.c.hdr  optim.c.hdr  sarima.c.hdr  sarimatest.c.hdr  ts.c.hdr
src/: CMakeLists.txt  cstats.c  cstats.h  fit.c  fit.h  fit_internal.h  linalg.c  linalg.h  optim.c  optim.h  sarima.c  ts.c  ts.h  types.h
test/: CMakeLists.txt  sarimatest.c
